<resources>
    <string name="app_name">The17ODSapp</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="label_button_regisrar">Registrar</string>
    <string name="label_button_entrar">Entrar</string>
    <string name="label_bienvenido">Bienvenido</string>
    <string name="label_button_cerrarsesion">Cerrar sesión</string>
    <string name="label_switch_mostrarcontrasenia">Mostrar Contraseña</string>
    <string name="label_button_olvidecontrasenia">Olvidé mi contraseña</string>
    <string name="hint_ejemploEmail">ejemplo@gmail.com</string>
    <string name="label_button_recuperarContrasenia">Recuperar contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_registraDatos">Registra tus datos</string>
    <string name="label_nombreCompleto">Nombre completo</string>
    <string name="label_direccion">Dirección</string>
    <string name="label_direccionCalle">Calle</string>
    <string name="label_direccionNExterior">N. Exterior</string>
    <string name="label_direccionCPostal">C.P</string>
    <string name="label_direccionColonia">Colonia</string>
    <string name="label_direccionPais">País</string>
    <string name="label_direccionEstado">Estado</string>
    <string name="label_direccionCiudad">Ciudad</string>
    <string name="label_button_registrarDatos">Registrar datos</string>
    <string name="label_nickname">Nickname</string>
    <string name="hint_nickname">Usuario007</string>
    <string name="label_button_jugar">Jugar</string>
    <string name="label_puntos">0 pts</string>
    <string name="label_button_siguiente">siguiente</string>
</resources>